[tool.poetry]
    name = "raider"
    version = "0.2.0"
    description = "Web authentication testing framework"
    authors = ["Daniel Neagaru <daniel@digeex.de>"]
    packages = [
      { include = "raider" }
    ]
    license = "GPL-3.0-or-later"
    readme = "README.md"
    homepage = "https://github.com/DigeeX/raider"
    repository = "https://github.com/DigeeX/raider"
    documentation = "https://raider.readthedocs.io/en/latest/"
    include = [
      "LICENSE",
      "CHANGELOG.md",
      "docs/**/*",
      "examples",
      "scripts"
    ]
    keywords = ["authentication", "security", "raider", "digeex", "hy"]
    classifiers = [
      "Development Status :: 3 - Alpha",
      "Environment :: Console",
      "Intended Audience :: Developers",
      "Intended Audience :: System Administrators",
      "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
      "Natural Language :: English",
      "Operating System :: POSIX :: Linux",
      "Programming Language :: Lisp",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Topic :: Internet :: WWW/HTTP",
      "Topic :: Security",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Topic :: Software Development :: Testing",
    ]

# [tool.poetry.scripts]
#     raider = "raider.cli:main"

[tool.poetry.dependencies]
    python = "^3.8"
    hy = "^0.20.0"
    requests = "^2.25.1"
    importlib-metadata = "^4.6.1"
    bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
    pytest = "^5.2"
    pytest-cov = "^2.12.1"
    pre-commit = "^2.13.0"
    flake8 = "^3.9.2"
    pylint = "^2.9.3"
    black = {version = "^21.6b0", allow-prereleases = true}
    isort = "^5.9.1"
    sphinxcontrib-needs = "^0.7.0"
    sphinx-autodoc-typehints = "^1.12.0"
    sphinx-rtd-theme = "^0.5.2"

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.black]
    line-length = 79
    target-version = ['py39']
    include = '\.pyi?$'
    exclude = '''
    (
      /(
        | \.git
        | \.tox
        | dist
	| docs
	| scripts
      )/
    )
    '''

[tool.isort]
    multi_line_output = 3
    include_trailing_comma = true
    force_grid_wrap = 0
    use_parentheses = true
    line_length = 79


[tool.pylint.master]
    ignore-patterns = '''
         \.git
	 |conf.py
	 |scripts/*
    '''

[tool.pylint.message_control]
    disable = '''
    import-error,
    '''


[tool.mypy]
    python_version = "3.9"
    follow_imports = "silent"
    strict_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    disallow_any_generics = true
    check_untyped_defs = true
    no_implicit_reexport = true
    disallow_untyped_defs = true
    exclude = "scripts"
    overrides = [

    # TODO
    # something doesn't work with requests types in the virtual environment
    { module = "requests.*", ignore_missing_imports = true },

    ]
